#9574 [ITSM] register/ edit 공통 mixin 생성 - FAQ, 자료실, 게시판, 시스템관리 > 사용자,

--- a/src/main/resources/public/src/scss/theme/default/_buttons.scss
+++ b/src/main/resources/public/src/scss/theme/default/_buttons.scss
@@ -30,6 +30,11 @@ button {
     display: inline-block;
     @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.625rem, 1.25rem, no-repeat, center, 1.625rem 1.25rem, $dark-gray); // 18px 20px
   }
+  // 삭제 아이콘
+  .icon-delete-gray {
+    display: inline-block;
+    @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.625rem, 1.25rem, no-repeat, center, 1.625rem 1.25rem, $pressed-gray); // 18px 20px
+  }
   // 추가 아이콘
   .icon-plus {
     display: inline-block;
