--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -69,7 +69,7 @@
                         <label th:text="#{user.label.mobileNumber}"></label>
                         <input type="text" id="mobileNumber" name="mobileNumber" maxlength="100">
                         <label th:text="#{user.label.avatar}"></label>
-                        <div class="avatar-edit">
+                        <div class="flex-column avatar-edit">
                             <div class="avatar-sm">
                                 <div id="avatarDropZone"></div>
                                 <div class="avatar-description">
