--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -16,7 +16,10 @@
         </div>
         <div class="download-content-edit">
             <div class="flex-column edit-row">
-                <label class="required" th:text="#{download.label.category}" for="downloadCategory"></label>
+                <label for="downloadCategory">
+                    <span th:text="#{download.label.category}"></span>
+                    <span class="required"></span>
+                </label>
                 <select id="downloadCategory">
                     <option th:each="category: ${categoryList}"
                             th:value="${category.code}"
@@ -25,7 +28,10 @@
                 </select>
             </div>
             <div class="flex-column edit-row">
-                <label class="required" th:text="#{common.label.title}" />
+                <label for="downloadTitle">
+                    <span th:text="#{common.label.title}"></span>
+                    <span class="required"></span>
+                </label>
                 <input type="text" id="downloadTitle" maxlength="100" th:value="${download?.downloadTitle}"></td>
             </div>
             <div class="flex-column edit-row file-uploader-edit">
