--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -107,6 +107,7 @@
                     aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
                 });
             }
+            OverlayScrollbars(document.querySelectorAll('.scroll-wrap'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('#faqContent'), {
                 className: 'scrollbar',
                 resize: 'vertical',
